# distribusi-foh

./: .gitignore  README.md  deploy.sh  fragments_index.json  fregments_index.json  index.json  init.sh  pyproject.toml  requirements.txt  test-ffmpeg.py  test.sh
distribusi/: .gitignore  CHANGELOG.md  Makefile  README.md  TODO.md  build.sh  pyproject.toml  setup.py  test.py
distribusi/distribusi/: cli.py  distribusi.py  fragments.py  fregments.py  ignore.py  mappings.py  page_template.py  page_template_event.py  page_template_events.py
distribusi/scripts/: m-m-mount.sh
src/: about.html  fragment.html  fragments.html  home.html  introduction.json  test.html
src/scripts/: mobileScroll.js  physicsLayout.js
src/scripts/lib/: decomp.js
src/style/: common.css
system/crontab/: crontab.as_a_ref
system/inotifywait-watcher/: distribusi-watcher.sh
template/: test.html
template/src/: script.js
test_data/: .ignore  about.html  about_en.html  common.css  fragment.html  home.html  index.html  index.json  participants.html  sample_home.html
test_data/carrot/: 1030.txt  RTF테스트.rtf  index.html  md쓰기.md  txt쓰기.txt  꾸물꾸물.mov
test_data/event_lecture/: index.html
test_data/event_lecture/event_0000/: index.html
test_data/event_workshop/: index.html
test_data/events/: data.json  event_sample.html  events_sample.html  index.html  index.html___.html  list.html
test_data/fig/: SLEIGothicTTF.eot  index.html  style.css
test_data/grape/: index.html
test_data/src/: authors.html  fragments.html  home.html  index.html  introduction.json  introduction_en.json
(+35 files in other folders)
